--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}
 
-SUBDIRS = . src po
+SUBDIRS = . data src po
 
 INTLTOOL_FILES = \
 	intltool-extract.in \
