Using GIO Resources to load the UI for the app menu

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,3 +1,10 @@
+resource_files = $(shell $(GLIB_COMPILE_RESOURCES) --sourcedir=$(srcdir) --generate-dependencies $(srcddir)/hazlo.gresource.xml)
+hazlo.gresource: hazlo.gresource.xml $(resource_files)
+	$(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) --target=$@ --sourcedir=$(srcdir) $<
+
+resourcedir = $(pkgdatadir)
+resource_DATA = hazlo.gresource
+
 desktopdir = $(datadir)/applications
 desktop_in_in_files = hazlo.desktop.in.in
 desktop_in_files = hazlo.desktop.in
@@ -7,10 +14,12 @@ desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_XML_RULE@
 
 EXTRA_DIST = \
+	$(resource_files) \
 	$(desktop_in_in_files) \
 	$(NULL)
 
 CLEANFILES = \
+	hazlo.gresource \
 	$(desktop_DATA) \
 	$(NULL)
 
